cargo_check_final_universal_5.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-core v0.1.0 (/app/crates/auth-core)
warning: unused imports: `Serialize` and `de::DeserializeOwned`
 --> crates/auth-cache/src/lib.rs:4:13
  |
4 | use serde::{de::DeserializeOwned, Serialize};
  |             ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-cache` (lib) generated 1 warning (run `cargo fix --lib -p auth-cache` to apply 1 suggestion)
    Checking auth-extension v0.1.0 (/app/crates/auth-extension)
    Checking auth-db v0.1.0 (/app/crates/auth-db)
    Checking auth-protocols v0.1.0 (/app/crates/auth-protocols)
    Checking auth-audit v0.1.0 (/app/crates/auth-audit)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
warning: unused import: `StatusCode`
 --> crates/auth-api/src/handlers/oidc_provider.rs:5:12
  |
5 |     http::{StatusCode, HeaderMap},
  |            ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> crates/auth-api/src/handlers/oidc_provider.rs:8:5
  |
8 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `http::StatusCode`
  --> crates/auth-api/src/handlers/auth_flow.rs:14:5
   |
14 |     http::StatusCode,
   |     ^^^^^^^^^^^^^^^^

warning: unused import: `Json`
 --> crates/auth-api/src/error.rs:4:5
  |
4 |     Json,
  |     ^^^^

warning: unused import: `auth_cache::Cache`
  --> crates/auth-api/src/handlers/oidc_provider.rs:12:5
   |
12 | use auth_cache::Cache;
   |     ^^^^^^^^^^^^^^^^^

warning: unused variable: `e`
   --> crates/auth-api/src/handlers/oidc_provider.rs:126:19
    |
126 |         .map_err(|e| ApiError::new(AuthError::InternalError))?; // Log error in real app
    |                   ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `identifier`
  --> crates/auth-api/src/handlers/workflow/universal.rs:25:13
   |
25 |         let identifier = action.payload.get("identifier")
   |             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_identifier`

warning: unused variable: `ctx`
  --> crates/auth-api/src/handlers/workflow/universal.rs:19:28
   |
19 |     async fn handle(&self, ctx: &mut FlowContext, action: FlowAction) -> Result<FlowState, AuthError> {
   |                            ^^^ help: if this is intentional, prefix it with an underscore: `_ctx`

warning: unused variable: `ctx`
  --> crates/auth-api/src/handlers/workflow/universal.rs:44:28
   |
44 |     async fn handle(&self, ctx: &mut FlowContext, action: FlowAction) -> Result<FlowState, AuthError> {
   |                            ^^^ help: if this is intentional, prefix it with an underscore: `_ctx`

warning: unused variable: `password`
  --> crates/auth-api/src/handlers/workflow/lazy_upgrade.rs:17:13
   |
17 |         let password = action.payload.get("password")
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_password`

warning: unused variable: `ctx`
  --> crates/auth-api/src/handlers/workflow/lazy_upgrade.rs:12:28
   |
12 |     async fn handle(&self, ctx: &mut FlowContext, action: FlowAction) -> Result<FlowState, AuthError> {
   |                            ^^^ help: if this is intentional, prefix it with an underscore: `_ctx`

warning: `auth-api` (lib) generated 11 warnings (run `cargo fix --lib -p auth-api` to apply 10 suggestions)
    Checking auth-sso-platform v0.1.0 (/app)
error[E0432]: unresolved imports `auth_core::services::TokenEngine`, `auth_core::services::TokenProvider`
 --> src/bin/test_mysql.rs:1:27
  |
1 | use auth_core::services::{TokenEngine, TokenProvider};
  |                           ^^^^^^^^^^^  ^^^^^^^^^^^^^ no `TokenProvider` in `services`
  |                           |
  |                           no `TokenEngine` in `services`
  |
  = help: consider importing this struct instead:
          auth_core::prelude::token_service::TokenEngine
  = help: consider importing this trait instead:
          auth_core::prelude::token_service::TokenProvider

error[E0282]: type annotations needed
  --> src/bin/test_mysql.rs:30:9
   |
30 |     let engine = TokenEngine::new_with_stores(revoked_repo, refresh_repo).await?;
   |         ^^^^^^
...
63 |     let refresh_token = engine.issue_refresh_token(user_id, tenant_id).await?;
   |                         ------ type must be known at this point
   |
help: consider giving `engine` an explicit type
   |
30 |     let engine: /* Type */ = TokenEngine::new_with_stores(revoked_repo, refresh_repo).await?;
   |               ++++++++++++

Some errors have detailed explanations: E0282, E0432.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `auth-sso-platform` (bin "test_mysql") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
